Delete canvas (normally done in EditorWindow destructor) before shutting down loading cache. Dont get a crash here now.

BUG: 221569

svn path=/trunk/extragear/graphics/digikam/; revision=1078146